# libprg

./: l4-exercicio1.c
libprg/: CMakeLists.txt  l2-exercico-1.c
libprg/src/include/libprg/: libprg.h
libprg/src/libprg/: arvore.c  arvore_binaria.c  blubble_sort.c  bubble_short.c  dicionario.c  fila.c  lista.c  lista_encadeada.c  lista_encadeada_dupla.c  lista_linear.c  pilha.c  recursao.c
